src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>agreementEndAction__c</fullName>
        <label>Gotransverse AgreementEndAction</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Period__c</fullName>
        <label>Gotransverse Agreement Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_Agreement_Eid__c</fullName>
        <label>Gotransverse Applied Agreement Eid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_eid__c</fullName>
        <label>Gotransverse Discount Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Gotransverse Discount</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Reciept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Reciept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Please enter an email for the responsible person, to represent the tenant.</inlineHelpText>
        <label>Gotransverse Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Existing_Service_Eid__c</fullName>
        <label>Gotransverse Existing Service Eid</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Existing Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>firstname__c</fullName>
        <inlineHelpText>Please enter a unique first name for the responsible person, to represent the tenant.</inlineHelpText>
        <label>Gotransverse First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotransverse_NextAgreementEndAction__c</fullName>
        <label>Gotransverse NextAgreementEndAction</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Next_Agreement_Eid__c</fullName>
        <label>Gotransverse Next Agreement Eid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Overrided_Trial_Length__c</fullName>
        <label>Gotransverse Overrided Trial Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GTV_Next_Renewal_Price__c</fullName>
        <label>GTV Next Renewal Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTV_OneTime_Price_Range_Information__c</fullName>
        <label>GTV OneTime Price Range Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GTV_Recurring_Price_Range_Information__c</fullName>
        <label>GTV Recurring Price Range Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GTV_Renewal_Price__c</fullName>
        <label>GTV Renewal Price</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastname__c</fullName>
        <inlineHelpText>Please enter a unique user name for the responsible person, to represent the tenant.</inlineHelpText>
        <label>Gotransverse Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxServiceResources__c</fullName>
        <label>Gotransverse MaxServiceResources</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minServiceResources__c</fullName>
        <label>Gotransverse MinServiceResources</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Service_Resource__c</fullName>
        <description>Please enter the New Service Identifier to be created while placing the Salesorder.</description>
        <inlineHelpText>Please enter the New Service Identifier to be created while placing the Salesorder.</inlineHelpText>
        <label>Gotransverse New Service Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneTimePrice__c</fullName>
        <label>Gotransverse OneTimePrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OneTimeProductPriceEid__c</fullName>
        <label>Gotransverse OneTimeProductPriceEid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overrideAgreementEndDate__c</fullName>
        <description>Override Agreement End Date</description>
        <label>Gotransverse Override Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentServiceEid__c</fullName>
        <label>Gotransverse ParentServiceEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>priceList_Eid__c</fullName>
        <label>Gotransverse PriceList Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>productEid__c</fullName>
        <description>The eid of Tract Product.</description>
        <label>Gotransverse Product Eid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>Gotransverse Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productOppEid__c</fullName>
        <externalId>true</externalId>
        <label>Gotransverse ProductOppEid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringPrice__c</fullName>
        <label>Gotransverse RecurringPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecurringProductPriceEid__c</fullName>
        <label>Gotransverse RecurringProductPriceEid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <label>Gotransverse ServiceName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Resource_Eid__c</fullName>
        <label>Gotransverse Service Resource Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gotransverse Service Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Resource__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select an active Service Resource</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Resource__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gotransverse Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tract_Service_Resource_Name__c</fullName>
        <label>Gotransverse Service Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <description>Please enter a unique user name.</description>
        <inlineHelpText>Please enter a unique user name for the responsible person, to represent the tenant.</inlineHelpText>
        <label>Gotransverse User name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>